--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#new</h1>
+<%= provide :title, t("title.signup") %>
+<h1><%= t "title.signup" %></h1>
 <p>Find me in app/views/users/new.html.erb</p>
