--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,23 @@
 <%= provide :title, t("title.signup") %>
 <h1><%= t "title.signup" %></h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @user do |f| %>
+      <%= render "shared/error_messages" %>
+
+      <%= f.label :full_name %>
+      <%= f.text_field :full_name, class: "form-control" %>
+
+      <%= f.label :user_name %>
+      <%= f.text_field :user_name, class: "form-control" %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "form-control" %>
+
+      <%= f.label :password_confirmation, t("title.confirmation") %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+
+      <%= f.submit t("button.create_account"), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
