--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,22 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to t("title.home"), root_path %></li>
             <li><%= link_to t("title.help"), help_path %></li>
-            <li><%= link_to t("title.login"), login_path %></li>
+            <% if logged_in? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <%= t "title.account" %>
+                  <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to t("title.logout"), logout_path, method: :delete %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to t("title.login"), login_path %></li>
+            <% end %>
+
           </ul>
         </nav>
       </div>
