--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -135,9 +135,8 @@ aside {
   float: left;
   margin-right: 10px;
 }
-
-.gravatar_edit {
-  margin-top: 15px;
+.radius{
+  border-radius: 50%;
 }
 
 /* forms */
