--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,27 +1,28 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to t("title.app_name"), root_path, id: "logo" %>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to t("title.home"), root_path %></li>
-            <li><%= link_to t("title.help"), help_path %></li>
-            <% if logged_in? %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <%= t "title.account" %>
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <%= link_to t("title.logout"), logout_path, method: :delete %>
-                  </li>
-                </ul>
+  <div class="container">
+    <%= link_to t("title.app_name"), root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+          <li><%= link_to t("title.user"), "#" %></li>
+          <li><%= link_to t("title.help"), help_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= gravatar_for current_user, size: 30, radius: "radius" %>
+              <%= current_user.user_name %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to t("title.logout"), logout_path, method: :delete %>
               </li>
-            <% else %>
-              <li><%= link_to t("title.login"), login_path %></li>
-            <% end %>
-
-          </ul>
-        </nav>
-      </div>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("title.signup"), signup_path %></li>
+          <li><%= link_to t("title.login"), login_path %></li>
+        <% end %>
+      </ul>
+    </nav>
+  </div>
 </header>
