--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,11 +8,14 @@
           <li><%= link_to t("title.help"), help_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= gravatar_for current_user, size: 30, radius: "radius" %>
+              <%= gravatar_for current_user, size: Settings.user.avatar_header_size, radius: "radius" %>
               <%= current_user.user_name %>
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider"></li>
               <li>
                 <%= link_to t("title.logout"), logout_path, method: :delete %>
               </li>
