--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
-<%= provide :title, t("title.signup") %>
-<h1><%= t "title.signup" %></h1>
+<% provide :title, t("title.edit_user") %>
+<h1><% t "title.update_profile" %></h1>
+
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render "form" %>
