--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,22 @@
 <%= provide :title, t("title.home") %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="post_form">
+        <%= render "shared/post_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Post Feed</h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1><%= t "title.welcome_to_project" %></h1>
   <%= link_to t("signup_now"), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+<% end %>
