--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,21 @@
 <li id="post-<%= post.id %>">
-  <%= link_to gravatar_for(post.user, size: Settings.user.avatar_size_for_post, radius: "radius"),
-    post.user %>
+  <%= link_to gravatar_for(post.user, size: Settings.user.avatar_size_for_post,
+    radius: "radius"), post.user %>
   <span class="user"><%= link_to post.user.full_name, post.user %></span>
   <span class="content"><b>Title : </b><%= post.title %></span>
   <span class="content"><%= post.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words post.created_at %> ago.
-    <% if current_user = post.user %>
+    <% if current_user == post.user %>
       <%= link_to "delete", post, method: :delete,
         data: {confirm: "You sure?"} %>
     <% end %>
   </span>
+  <ul class="comments", id="comments-list-<%= post.id %>">
+    <%= render partial: "comments/comment", collection: post.comments, as: "comment" %>
+  </ul>
+<% if logged_in?%>
+  <%= render "shared/comment_form",post: post %>
+<% end %>
 </li>
+
