--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,6 +54,13 @@ h2 {
   text-align: center;
 }
 
+.non-list-style{
+  li{
+    list-style-type:none;
+    margin: 5px 0;
+  }
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -137,6 +144,44 @@ aside {
 }
 .radius{
   border-radius: 50%;
+}
+
+.stats {
+  a {
+    border-left: 1px solid $gray-lighter;
+    color: gray;
+    float: left;
+    padding: 0 10px;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: blue;
+    }
+  }
+  margin-top: 0;
+  overflow: auto;
+  padding: 0;
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  a {
+    padding: 0;
+  }
+  margin-top: 10px;
+  overflow: auto;
+  .gravatar {
+    margin: 1px;
+  }
+}
+
+.users.follow {
+  padding: 0;
 }
 
 /* comments */
