--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,17 +4,18 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-          <li><%= link_to t("title.user"), "#" %></li>
+          <li><%= link_to t("title.user"), @user %></li>
           <li><%= link_to t("title.help"), help_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= gravatar_for current_user, size: Settings.user.avatar_header_size, radius: "radius" %>
+              <%= gravatar_for current_user, size: Settings.user.avatar_header_size,
+               radius: "radius" %>
               <%= current_user.user_name %>
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to t("title.profile"), current_user %></li>
+              <li><%= link_to t("title.settings"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("title.logout"), logout_path, method: :delete %>
