--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([post, @comment]) do |f| %>
+<%= form_for [post, post.comments.build] do |f| %>
   <%= render "shared/error_messages", object: f.object %>
   <div class="field">
     <div class="row">
