--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,10 +7,14 @@
         <%= @user.full_name %>
       </h1>
     </section>
+    <section class="stats">
+      <%= render "shared/stats" %>
+    </section>
   </aside>
   <div class="col-md-8">
+    <%= render "shared/follow_form" if logged_in? %>
     <% if @user.posts.any? %>
-      <h3>Posts (<%= @user.posts.count %>)</h3>
+      <h3>Posts (<%= @user.posts.size %>)</h3>
       <ol class="posts">
         <%= render @posts %>
       </ol>
